DME APIs for QOE (#538)
* Initial checkin of protos

* updates per review:

Removed DT specific stuff from edge-cloud; made a similar implementation for open source

Implemented stub code

* Per suggestion from Sunay, add the location into the response so
that the client does not have to remember it
